# BinanceBot

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
src/: config.py
src/assets/: commands.py  states.py  texts.py
src/core/: __init__.py  app.py  bot.py  database.py  dispatcher.py  env.py  handler.py  handler_group.py  job.py  markup.py  types.py
src/core/events/: __init__.py  click.py  command.py  event.py  inline_query.py  message.py  text.py
src/core/filters/: __init__.py  button.py
src/core/keyboards/: __init__.py  inline_keyboard.py  keyboard.py  removed_keyboard.py
src/core/middlewares/: __init__.py
src/handlers/: __init__.py  rub_to_kzt.py  usd_to_rub.py  usdt_to_kzt.py
src/handlers/start/: __init__.py  entry.py  rate.py
src/jobs/: __init__.py  check_rate.py
src/lib/: __init__.py  binance.py  messages.py  rate.py  state.py
src/middlewares/: __init__.py
