[tool.poetry]
name = "binancebot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.24"
pymongo = "^4.3.3"
motor = "^3.1.1"
mongoengine = "^0.25.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
